2005-07-12  Sebastien Bacher  <seb128@debian.org>

	* modmap-dialog.glade: fix a label form (Closes: #167739).

2005-07-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-keyboard-xkb.c: (activation_error):
	fixed some typo, Clytie Siddall <clytie@riverland.net.au> 
	(Closes: #302614).

2005-07-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-keyboard-xkb.c: (activation_error):
	fix the markup usage of the XKB dialog (Closes: #308279).

2005-07-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-xsettings.c: 
	patch by Matthias Clasen <mclasen@redhat.com> to expose the cursor 
	theme settings as xsettings (Closes: #308104).

2005-06-12  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-daemon.c: (clipboard_manager_watch_cb):
	return instead of using an assertion (Closes: #307149).

2005-06-12  Christophe Fergeau  <teuf@gnome.org>

	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_get_volume): fix crash when trying to change 
	volume using the multimedia keys, fixes #307351

2005-03-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnome-settings-accessibility-keyboard.c: make sticky keys and slow
	keys dialog more HIG compliant and usable (selectable text, no
	separator, making ESC key close the dialog, separation between
	widgets, etc...)

2005-06-06  Rodrigo Moya <rodrigo@novell.com>

	* GNOME_Settings_Daemon.server.in: added name and description
	to the object information.

2005-06-05  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* actions/Makefile.am:
	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_set_mute), (update_state),
	(acme_volume_gstreamer_get_mute),
	(acme_volume_gstreamer_get_volume),
	(acme_volume_gstreamer_set_volume):
	  Fix mute handling, particularly for devices without hardware
	  mute support or with applications that use volume=0 for mute.
	  Also fix the fact that we linked against all of ALSA, OSS and
	  GStreamer if they were all available; default to GStreamer.